# barks-comic-building

./: .env  .gitignore  .justfile  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  cspell-words.txt  cspell.config.yaml  justfile  pyproject.toml  spelling.dic  ty.toml
.claude/: settings.local.json
barks-cmds/: barks-yearly-page-count.py  barks-yearly-payments.py  edit-page.py  edit-title.py  fantagraphics-info.py  fantagraphics-make-dirs.py  fantagraphics-stories-page-count.py  fantagraphics-story-dimensions.py  fantagraphics-story-files.py  fantagraphics-story-mods.py  fantagraphics-story-splashes.py  fantagraphics-write-mods-to-overrides-dir.py  find-title-from-volume.py  find-title.py  log-config.yaml  make-empty-configs.py  show-fixes-diffs.py  show-page.py  show-panel-bounds.py  show-title-images.py  show-title-page.py  show-volume-page.py  silent-night-panel-restore.py  test-logging.py  verify-title.py  yearly_graph.py
barks-restore/: batch-panel-bounds.py  batch-restore-pipeline.py  batch-svg-to-png.py  batch-upscayl.py  directory-upscayl.py  log-config.yaml  single-restore-pipeline.py  single-upscayl.py
barks-restore/src/: __init__.py  gmic_exe.py  image_io.py  inpaint.py  overlay.py  remove_colors.py  restore_pipeline.py  smooth_image.py  upscale_image.py  vtracer_to_svg.py
build-comics/: additional_file_writing.py  batch-build-comics.py  build_comics.py  check-build-comics-integrity.py  comics_integrity.py  log-config.yaml  utils.py  zipping.py
scripts/: bs-test.py  bs-the-payments.py  compare-build.sh  compare_build_dirs.py  compare_build_root_dirs.py  compare_fanta_image_dirs.py  compare_images.py  log-config.yaml  small-build-test.sh
src/barks_comic_building/: __init__.py  cli_setup.py  log_setup.py
src/barks_comic_building/query/: __init__.py  barks_chronological_titles.py  barks_yearly_page_count.py  barks_yearly_payments.py  edit_page.py  fantagraphics_info.py  fantagraphics_make_dirs.py  fantagraphics_stories_page_count.py  fantagraphics_story_dimensions.py  fantagraphics_story_files.py  fantagraphics_story_mods.py  fantagraphics_story_splashes.py  find_title.py  find_title_from_volume.py  make_empty_configs.py  show_fixes_diffs.py  show_panel_bounds.py  show_title_page.py  show_volume_page.py  silent_night_panel_restore.py  verify_title.py  yearly_graph.py
src/barks_comic_building/resources/: log-config.yaml
src/barks_comic_building/restore/: __init__.py  batch_panel_bounds.py  batch_restore_pipeline.py  batch_svg_to_png.py  batch_upscayl.py  directory_upscayl.py  gmic_exe.py  image_io.py  inpaint.py  overlay.py  remove_alias_artifacts.py  remove_colors.py  restore_pipeline.py  single_restore_pipeline.py  single_upscayl.py  smooth_image.py  upscale_image.py  verify_volume_images.py
