[project]
name = "barks-comic-building"
version = "0.1.0"
description = "Scripts to upscale, restore, build, and inquire Barks comics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "cairosvg>=2.8.2",
    "cpi>=2.0.7",
    "intspan>=1.6.1",
    "loguru>=0.7.3",
    "loguru-config>=0.1.0",
    "matplotlib>=3.10.5",
    "numba>=0.61.2",
    "opencv-python>=4.12.0.88",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "vtracer>=0.6.11",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]
